Replaced strings with *Tag.KEY, new requirements to pass gradlew check